
SUBDIRS=

SUBDIRS += core lapd softcxc timer-system
SUBDIRS += kfifo
SUBDIRS += netdev streamport ppp ec


if driver_hfc_usb
SUBDIRS += hfc-usb
endif

if driver_hfc_pci
SUBDIRS += hfc-pci
endif

if driver_hfc_4s
SUBDIRS += hfc-4s
endif

#if driver_hfc_e1
#SUBDIRS += hfc-e1
#endif

if driver_vgsm
SUBDIRS += vgsm
endif
