#
# vstuff
#
# Copyright (C) 2004-2006 Daniele Orlandi
#
# Authors: Daniele "Vihai" Orlandi <daniele@orlandi.com>
#
# This program is free software and may be modified and distributed
# under the terms and conditions of the GNU General Public License.
#

dist_sbin_SCRIPTS =

nodist_sbin_SCRIPTS =			\
	visdn_configurator

EXTRA_DIST = visdn_configurator.in
