
noinst_LIBRARIES = libq931.a

libq931_a_SOURCES =		\
	q931.c			\
	call.c			\
	ces.c			\
	intf.c			\
	msgtype.c		\
	ie.c			\
	ies.c			\
	timer.c			\
	channel.c		\
	out.c			\
	global.c		\
	chanset.c		\
	callref.c		\
	ie_bearercap.c		\
	ie_cdpn.c		\
	ie_cgpn.c		\
	ie_chanid.c		\
	ie_progind.c		\
	ie_cause.c		\
	ie_call_state.c		\
	ie_hlc.c		\
	ie_restind.c		\
	ie_sending_complete.c

INCLUDES = -I$(srcdir)/../../lapd/

AM_CFLAGS=-Wall -fno-inline

